tests/machine/x/c/for_list_collection.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/for_list_collection.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/for_list_collection.c:25:17: error: subscripted value is neither array nor pointer nor vector
   25 |     int n = tmp1[tmp2];
      |                 ^

   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:49Z
